# fastapi-docker

./: Dockerfile  docker-compose.yaml  pyproject.toml
fastapi-docker/: main.py
