[tool.poetry]
name = "fastapi-docker"
version = "0.1.0"
description = ""
authors = ["alpuga <alpuga8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
